--- a/index.html
+++ b/index.html
@@ -76,6 +76,16 @@
             <option value="Peace">Peace</option>
             <option value="Hope">Hope</option>
             <option value="Forgiveness">Forgiveness</option>
+            <option value="Career & Work">Career & Work</option>
+            <option value="Loneliness">Loneliness</option>
+            <option value="Overthinking">Overthinking</option>
+            <option value="Boundaries">Boundaries</option>
+            <option value="Self-Doubt">Self-Doubt</option>
+            <option value="Burnout">Burnout</option>
+            <option value="Life Direction">Life Direction</option>
+            <option value="Letting Go">Letting Go</option>
+            <option value="Patience">Patience</option>
+            <option value="Purpose">Purpose</option>
         </select>
         
         <button onclick="getQuote()">Get Scripture Quote</button>
